<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<header
		android:fragment="net.wexoo.organicdroid.PreferencesActivity$GeneralPrefs"
  		android:icon="@drawable/ic_menu_manage"
  		android:title="@string/pc_general"
  		android:summary="@string/pc_general_sum"
  		android:textColor="@color/title_background" />
    <header
		android:fragment="net.wexoo.organicdroid.PreferencesActivity$AppInfoFragment"
  		android:icon="@android:drawable/ic_menu_info_details"
  		android:title="@string/mi_info"
  		android:summary="@string/h_info_sum" />
  	<header 
  	    android:icon="@drawable/ic_menu_find"
        android:title="@string/b_visit_our_website"
        android:summary="@string/b_visit_our_website_sum">
        <intent android:action="android.intent.action.VIEW"
                android:data="@string/tv_visit_us" />
    </header>
  	<header 
  	    android:icon="@android:drawable/sym_action_email"
        android:title="@string/b_send_us_mail"
        android:summary="@string/b_send_us_mail_sum">
        <intent android:action="android.intent.action.VIEW"
                android:data="@string/tv_mail_us" />
    </header>
    <header
		android:fragment="net.wexoo.organicdroid.PreferencesActivity$PoweredByFragment"
  		android:icon="@android:drawable/ic_menu_myplaces"
  		android:title="@string/h_powered_by"
  		android:summary="@string/h_powered_by_sum" />
</preference-headers>